re PR rtl-optimization/18614 (ICE in simplify_binary_operation)

PR rtl-optimization/18614
	* simplify-rtx.c (simplify_binary_operation): Do not
	simplify inner elements of constant arguments of
	VEC_CONCAT insn.

testsuite:

	* gcc.dg/pr18614-1.c: New test.

From-SVN: r91159